--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="arry.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 class="ass">Assignment of GRID first page </h1>
+    <!-- <div class="container">
+      <div class="children" id="children-1">1</div>
+      <div class="children" id="children-2">2</div>
+      <div class="children" id="children-3">3</div>
+      <div class="children" id="children-4">4</div>
+      <div class="children" id="children-5">5</div>
+      <div class="children" id="children-6">6</div>
+      
+    </div> -->
+
+    <div class="container">
+      <div class="parent">
+        <div class="children bg-green" id="children-1"></div>
+        <div class="children bg-green" id="children-2"></div>
+        <div class="children bg-orange" id="children-3"></div>
+        <div class="children bg-red" id="children-4"></div>
+        <div class="children bg-orange" id="children-5"></div>
+        <div class="children bg-green" id="children-6"></div>
+        
+      </div>
+    </div>
+  </body>
 </html>
